--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -21,7 +21,9 @@ debug information
 		</title>
 
 		<!-- styles -->
-		{{ theme:css tag="true" }}
+    {{ theme:css tag="true" }}
+    {{ theme:css src="owl.carousel" tag="true" }}
+		{{ theme:css src="owl.theme" tag="true" }}
 
     <!--[if lt IE 9]>
       <script src='js/dependencies/html5shiv.js'></script>
@@ -49,28 +51,31 @@ debug information
 		<link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon2.png" }}">
 	</head>
 	<body>
-		<header>
-			<div class="wrapper">
+		<div class="wrapper">
+      <header>
 				<div class="inner-wrapper">
 					<div class="title">
 						<h1 class="bold-heading"><a href="{{ homepage }}">{{ _site_name}}</a></h1>
 						<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
-					</div><!-- <form action="#" class="main-form">
-	        	<input type="text" placeholder="Search">
-	      	</form> -->
-	      	</div><!--end of inner-wrapper-->
-					<div class="hero">
-						<img src="/assets/img/books1.jpg">
-	      		{{ theme:partial src="nav" }}
-	    		</div>
-	    	</div>
+					</div>
+	      </div><!--end of inner-wrapper-->
+        <div class="hero">
+  				<div id="owl-hero" class="owl-carousel owl-theme">
+            <div class="item"><img src="/assets/img/books1.jpg"></div>
+            <div class="item"><img src="/assets/img/new-york.jpeg"></div>
+            <div class="item"><img src="/assets/img/hero2.jpeg"></div>
+  	    	</div>
+        {{ theme:partial src="nav" }}
+        </div>
 			</header>
 			<div class="main" role="main">
 				{{ layout_content }}
 			</div><!--end of main-->
-
-			{{ theme:partial src="footer" }}
-
+      <div class="push"></div>
 		</div>
+    {{ theme:partial src="footer" }}
+    {{ theme:js src="jquery-1.9.1.min" tag="true"}}
+    {{ theme:js src="owl.carousel" tag="true"}}
+    {{ theme:js src="script" tag="true"}}
 	</body>
 </html>
