--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -21,61 +21,61 @@ debug information
 		</title>
 
 		<!-- styles -->
-    {{ theme:css tag="true" }}
-    {{ theme:css src="owl.carousel" tag="true" }}
+		{{ theme:css tag="true" }}
+		{{ theme:css src="owl.carousel" tag="true" }}
 		{{ theme:css src="owl.theme" tag="true" }}
 
-    <!--[if lt IE 9]>
-      <script src='js/dependencies/html5shiv.js'></script>
-    <![endif]-->
+		<!--[if lt IE 9]>
+			<script src='js/dependencies/html5shiv.js'></script>
+		<![endif]-->
 
-     <!--[if IE 8]>
-     	{{ theme:css src="ie8" tag="true"}}
-    <![endif]-->
+		 <!--[if IE 8]>
+			{{ theme:css src="ie8" tag="true"}}
+		<![endif]-->
 
-    <!--[if IE]>
-    <script type="text/javascript">
-     document.createElement("nav");
-     document.createElement("header");
-     document.createElement("footer");
-     document.createElement("section");
-     document.createElement("figure");
-     document.createElement("article");
-     document.createElement("aside");
-     document.createElement("hgroup");
-     document.createElement("iframe");
-    </script>
-    <![endif]-->
+		<!--[if IE]>
+		<script type="text/javascript">
+		 document.createElement("nav");
+		 document.createElement("header");
+		 document.createElement("footer");
+		 document.createElement("section");
+		 document.createElement("figure");
+		 document.createElement("article");
+		 document.createElement("aside");
+		 document.createElement("hgroup");
+		 document.createElement("iframe");
+		</script>
+		<![endif]-->
 
 		<!-- favicon -->
 		<link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon2.png" }}">
 	</head>
 	<body>
 		<div class="wrapper">
-      <header>
-				<div class="inner-wrapper">
+			<header>
+				<!-- <div class="inner-wrapper">
 					<div class="title">
 						<h1 class="bold-heading"><a href="{{ homepage }}">{{ _site_name}}</a></h1>
 						<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
 					</div>
-	      </div><!--end of inner-wrapper-->
-        <div class="hero">
-  				<div id="owl-hero" class="owl-carousel owl-theme">
-            <div class="item"><img src="/assets/img/books1.jpg"></div>
-            <div class="item"><img src="/assets/img/new-york.jpeg"></div>
-            <div class="item"><img src="/assets/img/hero2.jpeg"></div>
-  	    	</div>
-        {{ theme:partial src="nav" }}
-        </div>
+				</div><!--end of inner-wrapper-->
+				<div class="hero">
+					<div id="owl-hero" class="owl-carousel owl-theme">
+						<div class="item"><img src="/assets/img/books1.jpg"></div>
+						<div class="item"><img src="/assets/img/new-york.jpeg"></div>
+						<div class="item"><img src="/assets/img/hero2.jpeg"></div>
+					</div>
+				{{ theme:partial src="nav" }}
+				</div>
 			</header>
 			<div class="main" role="main">
 				{{ layout_content }}
 			</div><!--end of main-->
-      <div class="push"></div>
+			<div class="push"></div>
 		</div>
-    {{ theme:partial src="footer" }}
-    {{ theme:js src="jquery-1.9.1.min" tag="true"}}
-    {{ theme:js src="owl.carousel" tag="true"}}
-    {{ theme:js src="script" tag="true"}}
+		{{ theme:partial src="footer" }}
+		{{ theme:js src="jquery-1.9.1.min" tag="true"}}
+		{{ theme:js src="owl.carousel" tag="true"}}
+		{{ theme:js src="script" tag="true"}}
 	</body>
 </html>
