--- a/www/_themes/propio/templates/blog-entry.html
+++ b/www/_themes/propio/templates/blog-entry.html
@@ -1,35 +1,37 @@
 <div class="main-content">
-	<div class="big-inner-wrapper">
-		<h1 class="bold-heading entry">{{ title }}</h1>
-		{{ member:profile username=author }}
-      <span class="small">Posted on <span class="entry-date">{{ date }}</span> by <a href="{{ member }}"> {{ first_name }} {{ last_name}} </a></span>
-    {{ member }}
-			<div class="post-entry">
-          {{ if image }}
-            <figure class="left" style="background: url({{ image }}); background-size: cover"></figure>
-            {{ else }}
-            <figure class="left" style="background: url(/assets/img/woods.jpg)">
-            </figure>
-          {{ endif }}
-				<div class="post-text">
-				 {{ content }}
-				</div>
+	<div class="big-inner-wrapper entry">
+    <div class="title">
+  		<h1 class="bold-heading">{{ title }}</h1>
+  		{{ member:profile username=author }}
+        <span class="small"><span class="entry-date">{{ date }}</span> &nbsp;•&nbsp;<a href="{{ member }}"> {{ first_name }} {{ last_name}} </a></span>
+      {{ member }}
+    </div>
+		<div class="post-entry">
+      {{ if image }}
+        <figure class="left" style="background: url({{ image }}); background-size: cover"></figure>
+        {{ else }}
+        <figure class="left" style="background: url(/assets/img/woods.jpg)">
+        </figure>
+      {{ endif }}
+			<div class="text">
+			 {{ content }}
 			</div>
+		</div>
 
-	    <div id="disqus_thread"></div>
-	    <script type="text/javascript">
-	        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	        var disqus_shortname = 'historiacontempornea'; // required: replace example with your forum shortname
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'historiacontempornea'; // required: replace example with your forum shortname
 
-	        /* * * DON'T EDIT BELOW THIS LINE * * */
-	        (function() {
-	            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-	            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	        })();
-	    </script>
-	    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 	</div><!--end of inner-wrappwer-->
 </div>
