--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -2,15 +2,16 @@
 <div class="main-content">
   <div class="big-inner-wrapper">
      <h1 class="big-heading"> {{ title }}</h1>
-      <div class="post-box">
+      <div class="post-entry">
         {{ if image }}
-          <figure style="background: url({{ image }}) center no-repeat; background-size: cover; ">
+          <figure class="left" style="background: url({{ image }}) center no-repeat; background-size: cover; ">
           </figure>
         {{ endif }}
         <div class="post-text">
           <p>{{ description }}</p>
         </div>
       </div>
+      <div class="divider"></div>
       <section class="main-list">
         {{ content }}
       </section>
