--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -49,6 +49,7 @@ debug information
 
 		<!-- favicon -->
 		<link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon2.png" }}">
+		<link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div class="wrapper">
