--- a/www/_themes/propio/templates/about.html
+++ b/www/_themes/propio/templates/about.html
@@ -2,6 +2,7 @@
 <div class="main-content">
   <div class="big-inner-wrapper">
     <h1 class="big-heading">Sobre el grupo de investigación</h1>
+    <div class="divider"></div>
     <p class="big-p">
     	{{content}}
     </p>
