--- a/www/_themes/propio/templates/blog-entry.html
+++ b/www/_themes/propio/templates/blog-entry.html
@@ -6,6 +6,7 @@
         <span class="small"><span class="entry-date">{{ date }}</span> &nbsp;•&nbsp;<a href="{{ member }}"> {{ first_name }} {{ last_name}} </a></span>
       {{ member }}
     </div>
+     <div class="divider"></div>
 		<div class="post-entry">
       {{ if image }}
         <figure class="left" style="background: url({{ image }}); background-size: cover"></figure>
