--- a/www/_themes/propio/templates/credits.html
+++ b/www/_themes/propio/templates/credits.html
@@ -2,6 +2,7 @@
 <div class="main-content">
 	<div class="big-inner-wrapper">
 		<h1 class="big-heading">Créditos</h1>
+		 <div class="divider"></div>
 		<ul class="main-list">
 			{{content}}
 		</ul>
