--- a/www/_themes/propio/templates/researches.html
+++ b/www/_themes/propio/templates/researches.html
@@ -2,6 +2,7 @@
 <div class="main-content">
   <div class="big-inner-wrapper">
      <p class="big-heading">{{ title }}</p>
+     <div class="divider"></div>
      {{ entries:listing folder="investigadores" limit="10" sort_dir="desc" paginate="true" }}
      <div class="new-box">
         {{ if image }}
