--- a/www/_themes/propio/templates/bibliography.html
+++ b/www/_themes/propio/templates/bibliography.html
@@ -1,6 +1,7 @@
 <div class="main-content">
 	<div class="big-inner-wrapper">
 		<h1 class="big-heading">{{ title }}</h1>
+		 <div class="divider"></div>
 		<p class="big-p">
 			{{ content }}
 		</p>
