--- a/www/_themes/propio/templates/news.html
+++ b/www/_themes/propio/templates/news.html
@@ -2,6 +2,7 @@
 <div class="main-content">
 	<div class="big-inner-wrapper">
 		<h1 class="big-heading">{{ title }}</h1>
+    <div class="divider"></div>
 		<article>
       {{ entries:listing folder="novedades" limit="6" sort_dir="desc" paginate="true" }}
         <div class="new-box">
