--- a/www/_themes/propio/templates/profile.html
+++ b/www/_themes/propio/templates/profile.html
@@ -2,16 +2,17 @@
 <div class="main-content">
   <div class="big-inner-wrapper">
      <h1 class="big-heading"> {{ title }}</h1>
+    <!--  <div class="divider"></div> -->
       <div class="post-entry">
         {{ if image }}
           <figure class="left" style="background: url({{ image }}) center no-repeat; background-size: cover; ">
           </figure>
         {{ endif }}
-        <div class="post-text">
+        <div class="text">
           <p>{{ description }}</p>
         </div>
       </div>
-      <div class="divider"></div>
+      <!-- <div class="divider"></div> -->
       <section class="main-list">
         {{ content }}
       </section>
