--- a/www/_themes/propio/templates/publications.html
+++ b/www/_themes/propio/templates/publications.html
@@ -2,6 +2,7 @@
 <div class="main-content">
 	<div class="big-inner-wrapper">
 		<h1 class="big-heading"> {{ title }}</h1>
+		 <div class="divider"></div>
 		<section class="main-list">
       {{ content }}
     </section>
