--- a/www/_themes/propio/css/propio.css
+++ b/www/_themes/propio/css/propio.css
@@ -166,7 +166,6 @@ span, li {
 /* line 45, ../sass/base/_base.scss */
 .big-p {
   line-height: 1.8em;
-  padding-top: 1.3em;
 }
 
 /* line 49, ../sass/base/_base.scss */
@@ -432,7 +431,6 @@ h4, .delta {
 .big-heading {
   font-size: 30px;
   font-weight: 200;
-  margin: 0 0 1em 0;
   text-align: center;
   font-family: 'Abril Fatface', cursive;
 }
@@ -499,12 +497,12 @@ h4, .delta {
 
 /* line 21, ../sass/base/_layout.scss */
 .big-inner-wrapper {
-  padding: 4em 8em 6em 8em;
+  padding: 30px 100px;
 }
 @media only screen and (max-width: 49.92857em) {
   /* line 21, ../sass/base/_layout.scss */
   .big-inner-wrapper {
-    padding: 1em;
+    padding: 30px;
   }
 }
 
@@ -740,7 +738,6 @@ table {
   display: inline-block;
   color: #6c868c;
   text-transform: uppercase;
-  font-size: 12px;
   vertical-align: middle;
   font-weight: bold;
 }
@@ -748,8 +745,7 @@ table {
 .main-nav a span {
   display: inline-block;
   vertical-align: middle;
-  line-height: 100%;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .main-nav a:before {
@@ -781,6 +777,9 @@ table {
   .hero {
     position: relative;
   }
+  .hero img {
+    min-height: 390px;
+  }
   .main-nav {
     width: 230px;
     position: absolute;
@@ -792,12 +791,13 @@ table {
    width: 100%;
    text-align: left;
    border-bottom: 1px solid #797576;
+   padding: 0 15px;
+  }
+  .main-nav a span {
+    font-size: 12px;
   }
   .main-nav li:hover, .main-nav li:active {
     background: #65666b;
-  }
-  .main-nav a {
-    padding: 7px 50px 8px 15px;
   }
   .main-nav a.on:after {
     width: 0;
@@ -828,7 +828,6 @@ table {
   width: 100%;
   height: 289px;
   max-height: 282px;
-  min-height: 289px;
 }
 
 /* line 6, ../sass/objects/_header.scss */
@@ -923,6 +922,14 @@ header .subtitle {
   background-clip: padding-box;
   /* stops bg color from leaking outside the border: */
   background-size: cover;
+  -webkit-border-radius: 3px;
+  -mozborder-radius: 3px;
+  border-radius: 3px;
+  margin: 1px 20px 0 0;
+  -webkit-box-shadow: 1px 1px 1px 1px #ccc;
+  -moz-box-shadow: 1px 1px 1px 1px #ccc;
+  box-shadow: 1px 1px 1px 1px #ccc;
+  border: 2px solid #fff;
 }
 /* line 83, ../sass/objects/_post-box.scss */
 .post-entry figure.left {
@@ -984,11 +991,14 @@ header .subtitle {
   display: inline-block;
   vertical-align: top;
   background: #fff;
-  border: 1px solid #f1f1f1;
+  border: 2px solid #fff;
   -webkit-border-radius: 3px;
   -mozborder-radius: 3px;
   border-radius: 3px;
   margin: 1px 20px 0 0;
+  -webkit-box-shadow: 1px 1px 1px 1px #ccc;
+  -moz-box-shadow: 1px 1px 1px 1px #ccc;
+  box-shadow: 1px 1px 1px 1px #ccc;
 }
 
 .new-text p, .post-text p {
@@ -996,17 +1006,21 @@ header .subtitle {
   font-size: 16px;
 }
 
-.new-text, .post-text {
+.new-text, .post-text, .new-box .text {
   display: inline-block;
   vertical-align: top;
   width: 80%;
 }
 
-.new-text .small, .post-text .small {
+.new-text .small, .post-text .small, .new-box .text .small {
   float: right;
   line-height: 21px;
   text-transform: uppercase;
   font-size: 12px;
+}
+
+.new-box .text p{
+  clear: both;
 }
 
 .new-title h2, .post-text h2 {
@@ -1023,27 +1037,35 @@ header .subtitle {
 }
 
 @media only screen and (max-width: 49.92857em) {
+  p {
+    font-size: 16px;
+  }
+  .wrapper {
+    width: 100%;
+  }
   /* line 99, ../sass/objects/_post-box.scss */
-  .new-box .small {
+  .new-box .small, .post-box .small{
     float: none;
     display: block;
   }
-  .new-box h2 {
+  .new-box h2, .post-box h2 {
     float: none;
     display: block;
     margin: 0 auto;
+    font-size: 19px;
   }
-  .new-box .new-title {
+  .new-box .new-title, .post-box .post-title {
     text-align: center;
     margin-top: 10px;
   }
-  .new-box figure {
+  .new-box figure, .post-box figure {
     display: block;
     text-align: center;
     margin: 0 auto 10px;
   }
-  .new-box .new-text {
+  .new-box .new-text, .post-box .post-text {
     width: 100%;
+    max-height: 135px;
   }
   .new-text-sm p {
     display: none;
@@ -1051,6 +1073,31 @@ header .subtitle {
   figure.researches {
     display: inline-block;
     width: 30%;
+  }
+  .post-box p, .new-box p{
+    font-size: 16px;
+  }
+  .new-box .text p {
+    padding-top: 10px;
+  }
+  .post-box .more {
+    position: static;
+    text-align: center;
+    display: block;
+    font-size: 16px;
+  }
+  .post-box {
+    padding-bottom: 30px;
+  }
+  .post-entry p {
+    font-size: 16px;
+  }
+  .new-box .text {
+    width: 100%;
+  }
+  .new-box .text .small {
+    text-align: center;
+    float: none;
   }
 }
 
@@ -1066,21 +1113,12 @@ header .subtitle {
 
 .entry .title {
   text-align: center;
-/*  border-bottom: 1px solid #f1f1f1;*/
-  padding-bottom: 10px;
 }
 
 .new-text-sm {
   max-height: 77px;
   overflow: hidden;
 }
-
-.post-entry .text {
-  margin-bottom: 40px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #f1f1f1;
-}
-
 
 /*------------------------------------------*\
     FOOTER
@@ -1239,6 +1277,8 @@ aside .sidebar-list li {
   aside {
     width: 100%;
     display: block;
+    padding-left: 0;
+    margin-top: 20px;
   }
 }
 
@@ -1251,9 +1291,6 @@ aside .sidebar-list li {
   list-style-type: square;
   margin-left: 1em;
   font-size: 15px;
-}
-.main-list {
-  padding-top: 1.3em;
 }
 .main-list a {
   color: #65666b;
@@ -1341,4 +1378,9 @@ aside .sidebar-list li {
   width: 100%;
   border-top: 1px solid #f1f1f1;
   border-bottom: 1px solid #f1f1f1;
+  margin: 30px 0;
+}
+
+.divider.nm {
+  margin-bottom: 0;
 }
