--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -22,8 +22,6 @@ debug information
 
 		<!-- styles -->
 		{{ theme:css tag="true" }}
-		{{ theme:css src="owl.carousel" tag="true" }}
-		{{ theme:css src="owl.theme" tag="true" }}
 
 		<!--[if lt IE 9]>
 			<script src='js/dependencies/html5shiv.js'></script>
@@ -61,10 +59,8 @@ debug information
 					</div>
 				</div><!--end of inner-wrapper-->
 				<div class="hero">
-					<div id="owl-hero" class="owl-carousel owl-theme">
-						<div class="item"><img src="/assets/img/books1.jpg"></div>
-						<div class="item"><img src="/assets/img/new-york.jpeg"></div>
-						<div class="item"><img src="/assets/img/hero2.jpeg"></div>
+					<div class="hero-img">
+						<img src="/assets/img/books1.jpg">
 					</div>
 				{{ theme:partial src="nav" }}
 				</div>
@@ -75,8 +71,5 @@ debug information
 			<div class="push"></div>
 		</div>
 		{{ theme:partial src="footer" }}
-		{{ theme:js src="jquery-1.9.1.min" tag="true"}}
-		{{ theme:js src="owl.carousel" tag="true"}}
-		{{ theme:js src="script" tag="true"}}
 	</body>
 </html>
