--- a/www/_themes/propio/templates/news.html
+++ b/www/_themes/propio/templates/news.html
@@ -2,7 +2,7 @@
 <div class="main-content">
 	<div class="big-inner-wrapper">
 		<h1 class="big-heading">{{ title }}</h1>
-    <div class="divider"></div>
+    <div class="divider nm"></div>
 		<article>
       {{ entries:listing folder="novedades" limit="6" sort_dir="desc" paginate="true" }}
         <div class="new-box">
@@ -11,7 +11,7 @@
           {{ else }}
            <figure style="background: url(/assets/img/blog/images.jpeg) no-repeat;background-size: cover;background-position: center center"></figure>
           {{ endif }}
-          <div class="new-text">
+          <div class="text">
             <div class="new-title">
               <h2>{{ title }}</h2>
               {{ member:profile username=author }}
