--- a/www/_themes/propio/layouts/default.html
+++ b/www/_themes/propio/layouts/default.html
@@ -52,16 +52,16 @@ debug information
 	<body>
 		<div class="wrapper">
 			<header>
-				<!-- <div class="inner-wrapper">
-					<div class="title">
-						<h1 class="bold-heading"><a href="{{ homepage }}">{{ _site_name}}</a></h1>
-						<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
-					</div>
-				</div><!--end of inner-wrapper-->
+				<div class="mobile-title">
+					<a href="{{ homepage }}">{{ _site_name}}</a>
+				</div>
 				<div class="hero">
-					<div class="hero-img">
-						<img src="/assets/img/books1.jpg">
-					</div>
+					<div class="big-image">
+						<div class="mask">
+							<div class="title"><a href="{{ homepage }}">{{ _site_name}}</a>
+								<span class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus in doloremque ad, cum nesciunt. Asperiores placeat et, </span>
+							</div>
+						</div>
 				{{ theme:partial src="nav" }}
 				</div>
 			</header>
