--- a/www/_themes/propio/templates/news.html
+++ b/www/_themes/propio/templates/news.html
@@ -14,9 +14,9 @@
           <div class="text">
             <div class="new-title">
               <h2>{{ title }}</h2>
-              {{ member:profile username=author }}
-              <span class="small"><span class="entry-date">{{ date }}</span> &nbsp;•&nbsp; <a href="#"> {{ first_name }} {{ last_name}} </a></span>
-            {{ member }}
+               {{ member:profile username=author }}
+             <span class="small"><span class="entry-date">{{ date }}</span> &nbsp;•&nbsp; <a href="/blog/author/{{ author }}"> {{ first_name }} {{ last_name}} </a></span>
+              {{ member }}
           </div>
             <p>
               {{ content }}
